Add measuring page to docs

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,7 +13,8 @@ theme: readthedocs
 
 pages:
 - Home: index.md
+- Setup certificates: certificates.md
+- Measuring results: measuring.md
 - Roadmap: roadmap.md
-- Setup Certificates: certificates.md
 
 copyright: © 2016 <a href="http://www.nordeus.com" target="_blank">Nordeus</a>
