Issue #2 - Make servlet URI configurable

--- a/config.ini
+++ b/config.ini
@@ -60,3 +60,13 @@ db_pass = pushkin
 [Event]
 # event id of prebuilt login event
 login_event_id = 4001
+
+[RequestHandler]
+# URLs for all request handlers
+proto_event_handler_url = /post_events_proto
+proto_notification_handler_url = /post_notification_proto
+json_event_handler_url = /post_events_json
+json_notification_handler_url = /post_notification_json
+request_queue_handler_url = /get_request_queue
+apn_sender_queue_handler_url = /get_apn_sender_queue
+gcm_sender_queue_handler_url = /get_gcm_sender_queue
