--- a/config.ini
+++ b/config.ini
@@ -48,7 +48,7 @@ notifications_logger_name = notifications
 main_log_path = /var/log/pushkin/
 notification_log_path = /var/log/pushkin/notification/
 # notset, debug, info, warning, error, critical
-main_log_level = INFO
+main_log_level = DEBUG
 keep_log_days = 7
 
 [Database]
@@ -56,6 +56,7 @@ keep_log_days = 7
 db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
+db_pool_size = 2
 
 [Event]
 # event id of prebuilt login event
