Implement time to live (TTL) for notifications #8

--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -36,7 +36,7 @@ keep_log_days = 7
 
 [Database]
 db_user = pushkin
-db_name = pushkin_test
+db_name = pushkin
 db_pass = pushkin
 db_pool_size = 2
 
