Configurable logrotate for notification.csv log #15

--- a/config.ini
+++ b/config.ini
@@ -44,9 +44,11 @@ gcm_num_processes = 30
 [Log]
 # log configuration
 main_logger_name = pushkin
-notifications_logger_name = notifications
 main_log_path = /var/log/pushkin/
+notifications_logger_name = notifications
 notification_log_path = /var/log/pushkin/notification/
+notification_log_when_to_rotate = H
+notification_log_rotate_suffix = %Y-%m-%d_%H
 # notset, debug, info, warning, error, critical
 main_log_level = DEBUG
 keep_log_days = 7
