--- a/config.ini
+++ b/config.ini
@@ -57,6 +57,7 @@ db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
 db_pool_size = 2
+max_devices_per_user = 10
 
 [Event]
 # event id of prebuilt login event
