--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -39,6 +39,7 @@ db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
 db_pool_size = 2
+max_devices_per_user = 3
 
 [Event]
 login_event_id = 4001
