Implement enabling/disabling of specific notifications

--- a/config.ini
+++ b/config.ini
@@ -61,6 +61,7 @@ db_pool_size = 2
 [Event]
 # event id of prebuilt login event
 login_event_id = 4001
+turn_off_notification_event_id = 4002
 
 [RequestHandler]
 # URLs for all request handlers
