Configurable logrotate for notification.csv log #15

--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -33,6 +33,8 @@ notification_log_path = /var/log/pushkin/notification/
 # notset, debug, info, warning, error, critical
 main_log_level = INFO
 keep_log_days = 7
+notification_log_when_to_rotate = H
+notification_log_rotate_suffix = %Y-%m-%d_%H
 
 [Database]
 db_user = pushkin
