Upgrade APN - working version

--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -9,6 +9,7 @@ dry_run = false
 # max batch size for apn notifications
 apns_batch_size = 500
 apns_certificate_path = <ABSOLUTE-PATH-TO-APN-CERTIFICATE-HERE>
+apns_topic = <YOUR TOPIC HERE>
 gcm_access_key = <YOUR-GCM-KEY-HERE>
 apns_sandbox = false
 connection_error_retries = 3
