--- a/config.ini
+++ b/config.ini
@@ -15,6 +15,7 @@ dry_run = false
 # max batch size for apn notifications
 apns_batch_size = 500
 
+apns_topic = <YOUR TOPIC HERE>
 apns_certificate_path = <ABSOLUTE-PATH-TO-APN-CERTIFICATE-HERE>
 gcm_access_key = <YOUR-GCM-KEY-HERE>
 
