Make Pushkin possible to run multiple instances on one database #20

--- a/config.ini
+++ b/config.ini
@@ -55,6 +55,8 @@ keep_log_days = 7
 
 [Database]
 # database credentials
+db_host = localhost
+db_port = 5432
 db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
