--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -37,6 +37,8 @@ notification_log_when_to_rotate = H
 notification_log_rotate_suffix = %Y-%m-%d_%H
 
 [Database]
+db_host = localhost
+db_port = 5432
 db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
