sack sqlalchemy connection pool

--- a/config.ini
+++ b/config.ini
@@ -56,6 +56,7 @@ keep_log_days = 7
 
 [Database]
 # database credentials
+# to use unix socket set this to socket directory path
 db_host = localhost
 db_port = 5432
 db_user = pushkin
