--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -9,6 +9,7 @@ dry_run = false
 # max batch size for apn notifications
 apns_batch_size = 500
 apns_certificate_path = <ABSOLUTE-PATH-TO-APN-CERTIFICATE-HERE>
+apns_topic = <YOUR TOPIC HERE>
 gcm_access_key = <YOUR-GCM-KEY-HERE>
 apns_sandbox = false
 connection_error_retries = 3
@@ -37,6 +38,8 @@ notification_log_when_to_rotate = H
 notification_log_rotate_suffix = %Y-%m-%d_%H
 
 [Database]
+db_host = localhost
+db_port = 5432
 db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
