--- a/config.ini
+++ b/config.ini
@@ -15,6 +15,7 @@ dry_run = false
 # max batch size for apn notifications
 apns_batch_size = 500
 
+apns_topic = <YOUR TOPIC HERE>
 apns_certificate_path = <ABSOLUTE-PATH-TO-APN-CERTIFICATE-HERE>
 gcm_access_key = <YOUR-GCM-KEY-HERE>
 
@@ -38,8 +39,8 @@ sender_queue_limit = 50000
 
 # interval for batching apn messages
 apn_sender_interval_sec = 3
-apn_num_processes = 10
-gcm_num_processes = 30
+apn_num_processes = 50
+gcm_num_processes = 50
 
 [Log]
 # log configuration
@@ -55,10 +56,13 @@ keep_log_days = 7
 
 [Database]
 # database credentials
+# to use unix socket set this to socket directory path
+db_host = localhost
+db_port = 5432
 db_user = pushkin
 db_name = pushkin
 db_pass = pushkin
-db_pool_size = 2
+db_pool_size = 20
 max_devices_per_user = 10
 
 [Event]
