Make senders pluggable
Now each sender is being loaded as plugin.
This allows to explicitly load built-in senders (GCM and APN),
as well as any number of own senders implementation (and therefore
send arbitrary notifications like emails and chat messages).

Senders are specified by config option *enabled_senders*.
Each sender is represented with an importable path to sender class
and optional kwargs (in JSON) following after a whitespace.
Sender class must be a subclass of senders.NotificationSender.

Example:

```
enabled_senders =
  pushkin.sender.senders.ApnNotificationSender
  pushkin.sender.senders.GcmNotificationSender {"workers": 100}
  some.module.MySmtpSender {"workers": 10, "extra_argument": 42}
  some.module.MyChatSender
```

This patch does not update documentation.

--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -21,10 +21,9 @@ request_processor_num_threads = 10
 
 [Sender]
 sender_queue_limit = 50000
-# interval for batching apn messages
-apn_sender_interval_sec = 3
-apn_num_processes = 10
-gcm_num_processes = 30
+enabled_senders =
+  pushkin.sender.senders.ApnNotificationSender {"workers": 10}
+  pushkin.sender.senders.GcmNotificationSender {"workers": 30}
 
 [Log]
 main_logger_name = pushkin
