--- a/config.ini
+++ b/config.ini
@@ -37,10 +37,9 @@ request_processor_num_threads = 10
 # queue limit for sender processor. See Monitoring API for reference
 sender_queue_limit = 50000
 
-# interval for batching apn messages
-apn_sender_interval_sec = 3
-apn_num_processes = 50
-gcm_num_processes = 50
+enabled_senders =
+  pushkin.sender.senders.ApnNotificationSender {"workers": 50}
+  pushkin.sender.senders.GcmNotificationSender {"workers": 50}
 
 [Log]
 # log configuration
