limit number of users per device
add handler for monitoring notification post processor

--- a/pushkin/tests/test_config.ini
+++ b/pushkin/tests/test_config.ini
@@ -44,6 +44,7 @@ db_name = pushkin
 db_pass = pushkin
 db_pool_size = 2
 max_devices_per_user = 3
+max_users_per_device = 1
 
 [Event]
 login_event_id = 4001
@@ -58,3 +59,4 @@ json_notification_handler_url = /post_notification_json
 request_queue_handler_url = /get_request_queue
 apn_sender_queue_handler_url = /get_apn_sender_queue
 gcm_sender_queue_handler_url = /get_gcm_sender_queue
+notification_post_processor_queue_handler_url = /get_notification_post_processor_queue
