--- a/config.ini
+++ b/config.ini
@@ -63,6 +63,7 @@ db_name = pushkin
 db_pass = pushkin
 db_pool_size = 20
 max_devices_per_user = 10
+max_users_per_device = 1
 
 [Event]
 # event id of prebuilt login event
@@ -78,3 +79,4 @@ json_notification_handler_url = /post_notification_json
 request_queue_handler_url = /get_request_queue
 apn_sender_queue_handler_url = /get_apn_sender_queue
 gcm_sender_queue_handler_url = /get_gcm_sender_queue
+notification_post_processor_queue_handler_url = /get_notification_post_processor_queue
