[master] Update config for FCMPushSender

--- a/config.ini
+++ b/config.ini
@@ -17,8 +17,7 @@ apns_batch_size = 500
 
 apns_topic = <YOUR TOPIC HERE>
 apns_certificate_path = <ABSOLUTE-PATH-TO-APN-CERTIFICATE-HERE>
-gcm_access_key = <YOUR-GCM-KEY-HERE>
-
+google_application_credentials = <PATH_FCM_APPLICATION_CREDENTIAL.JSON>
 # for future use
 apns_sandbox = false
 connection_error_retries = 3
@@ -38,8 +37,8 @@ request_processor_num_threads = 10
 sender_queue_limit = 50000
 
 enabled_senders =
-  pushkin.sender.senders.ApnNotificationSender {"workers": 50}
-  pushkin.sender.senders.GcmNotificationSender {"workers": 50}
+    pushkin.sender.senders.ApnNotificationSender {"workers": 50}
+    pushkin.sender.senders.FcmNotificationSender {"workers": 50}
 
 [Log]
 # log configuration
